fix text overflow issue

--- a/site/pages/about-us/timeline-slice/style.css
+++ b/site/pages/about-us/timeline-slice/style.css
@@ -13,6 +13,10 @@
   margin: auto;
 }
 
+.content div div {
+  height: auto;
+}
+
 .image{
   width: 100%;
 }
